# Jasmine

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  opencode.json  package-lock.json  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260513_0001_initial_schema.py  20260513_0002_user_account_type.py  20260513_0003_creator_profile_public_fields.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: admin.py  approvals.py  auth.py  brands.py  campaigns.py  creators.py  generation_jobs.py  organizations.py  products.py  router.py  uploads.py  webhooks.py
apps/api/app/core/: config.py  permissions.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: entities.py
apps/api/app/prompts/: fashn.py  flux.py  openai_image.py  qc.py
apps/api/app/providers/: base.py  bfl_provider.py  fashn_provider.py  mock_provider.py  openai_image_provider.py
apps/api/app/schemas/: __init__.py
apps/api/app/services/: approval_service.py  auth_service.py  cost_service.py  creator_profiles.py  generation_orchestrator.py  quality_service.py  storage_service.py
apps/api/app/utils/: enums.py  image.py  urls.py
apps/api/app/workers/: celery_app.py  tasks_generation.py  tasks_qc.py  tasks_storage.py
apps/api/jasmine_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_mvp_flow.py  test_role_auth.py
apps/web/: Dockerfile  (+1 more)
docs/: api.md  architecture.md  model-routing.md  prompts.md
(+94 files in other folders)
