[project]
name = "jasmine-api"
version = "0.1.0"
description = "FastAPI backend for the Jasmine B2B2C AI fashion campaign MVP."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.2",
  "boto3>=1.42.0",
  "celery>=5.6.0",
  "email-validator>=2.3.0",
  "fastapi>=0.122.0",
  "httpx>=0.28.1",
  "passlib[bcrypt]>=1.7.4",
  "pillow>=12.0.0",
  "psycopg[binary]>=3.2.13",
  "pydantic-settings>=2.12.0",
  "pyjwt>=2.10.1",
  "python-multipart>=0.0.20",
  "redis>=7.1.0",
  "sqlalchemy>=2.0.44",
  "uvicorn[standard]>=0.38.0"
]

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
